<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_SmacCycleMan" Id="{c6fb51f8-b798-4e67-aa63-efef50b81745}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_SmacCycleMan

VAR_INPUT
	///////////////////////////////////////SETTINGS//////////////////////////////////////////////////
	nLinearVel						: DINT;
	nLinearAcc						: DINT;
	nLinearSetPoint					: DINT;
	nLinearTorque					: INT;
	
	nRotativeVel					: DINT;
	nRotativeAcc					: DINT;	
	nRotativeSetPoint				: DINT;//DINT;
		
	bFixtureGripperClosed			: BOOL;
	bGuideGripperClosed				: BOOL;

						 

///////////////////////////////////////MANUAL//////////////////////////////////////////////////
	bSetValues						: BOOL;
	bManual 						: BOOL;
	
	nManCycle						: DINT;
	bPickCycleMan					: BOOL;
	bScrewCycleMan					: BOOL;
	bHomeMan						: BOOL;
	
	

///////////////////////////////////////CYCLE//////////////////////////////////////////////////	
	bCycProcess						: BOOL;
	bAutoCycleAcknowledge			: BOOL;
	bAutoCycleRequest				: BOOL;
	bResetAutoCycle					: BOOL;
	bInitSecondPart					: BOOL;
	bRotativeWorkPosition			: DINT			:= 405;
	nUppperHeightLimit				: DINT;
	nLowerHeightLimit				: DINT;
///////////////////////////////////////REPORT//////////////////////////////////////////////////
	nDistanceSetPoint				: DINT;
	nDistanceTolerance				: DINT;
	
	
END_VAR
VAR_OUTPUT
	bAutoCycleAcknowledgeRequest	: BOOL;
	bCycleProcessDone				: BOOL;
	bFirstPartDoneFlag				: BOOL;
	bCycError						: BOOL;
	bOpenGuideGripper				: BOOL;
	bCloseGuideGripper				: BOOL;
	bCloseFixtureGripper			: BOOL;
	bPass							: BOOL;
	bFail							: BOOL;
	
	nScaledLinearVel				: DINT;
	nScaledLinearAcc				: DINT;
	nScaledLinearSetPoint			: DINT;
	nScaledLinearTorque				: INT;
	
	nScaledRotativeVel				: DINT;
	nScaledRotativeAcc				: DINT;	
	nScaledRotativeSetPoint			: DINT;
	
	MaxDistanceReached				: DINT;
	
	bScrewAnimation					: BOOL;
END_VAR
VAR
	tonCaseDelay					: ARRAY[0..40] OF TON;
	rTrigCase						: ARRAY[0..20] OF R_TRIG;
	bRotativeSetInPartPosition		: DINT			:= 405;
///////////////////////////////////////CYCLE//////////////////////////////////////////////////
	nCycleFunctionState				: DINT;
	bFirstAutoCycleFlag				: BOOL;
///////////////////////////////////////GENERAL//////////////////////////////////////////////////	
	bVelConst						: LREAL			:= 2621.44 ;
	bAccConst						: LREAL			:= 0.524288;
	bVelRotConst					: LREAL			:= 26214;
	

END_VAR
VAR_IN_OUT
	stSmacIO						: ST_SMAC_I_O;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bManual THEN
	ACT_Manual();
END_IF
IF bCycProcess	THEN
	ACT_Cycle();
END_IF

ACT_TimTrig();
ACT_Settings();]]></ST>
    </Implementation>
    <Action Name="ACT_Cycle" Id="{63f4add4-0065-41b5-9f96-a2449f3fce94}">
      <Implementation>
        <ST><![CDATA[IF bResetAutoCycle  THEN
	nCycleFunctionState 				:= 0;	
END_IF

CASE nCycleFunctionState OF
	

0://HOMING
bFirstPartDoneFlag						:= FALSE;
bAutoCycleAcknowledgeRequest			:= FALSE;
bCycError								:= FALSE;
bScrewAnimation							:= FALSE;
stSmacIO.qnControlWordLinear 			:= 10;
stSmacIO.qnControlWordRotative			:= 10;
stSmacIO.qnModeOfOperationLinear		:= 4;
stSmacIO.qnModeOfOperationRotative		:= 2;
bOpenGuideGripper						:= FALSE;

IF rTrigCase[0].Q THEN
	nCycleFunctionState 				:= 20;
	bCycleProcessDone					:= FALSE;
	bPass								:= FALSE;
	bFail								:= FALSE;
END_IF

20:// CHECKING HOME AND PHASING
IF stSmacIO.inStatusWordLinear.6 AND stSmacIO.inStatusWordLinear.8 AND
	stSmacIO.inStatusWordRotative.6 AND stSmacIO.inStatusWordRotative.8 THEN
	nCycleFunctionState 				:= 200;
ELSE nCycleFunctionState 				:= 5000;
END_IF
200://SAFETY CHECK
IF (stSmacIO.inModeOfOperationLinear = 4) AND (stSmacIO.inModeOfOperationRotative = 2) AND
	NOT (stSmacIO.inStatusWordLinear.13) AND NOT (stSmacIO.inStatusWordRotative.13) AND
	(stSmacIO.inStatusWordLinear.1)AND (stSmacIO.inStatusWordRotative.1) THEN //else error
	nCycleFunctionState 				:= 300;
ELSE nCycleFunctionState 				:= 5000;
END_IF
300:
IF tonCaseDelay[11].Q THEN
	nCycleFunctionState 				:= 400;
END_IF
400://ROTATIVE TO WORK POSITION
stSmacIO.qnControlWordLinear 			:= 10;
stSmacIO.qnControlWordRotative 			:= 10;
stSmacIO.qnSetPointRotative 			:= bRotativeWorkPosition;
IF tonCaseDelay[12].Q THEN
	stSmacIO.qnControlWordRotative 		:= 1;
	nCycleFunctionState 				:= 450;
	
END_IF
450://ONCE ROTATIVE FINISH LINEAR START
IF tonCaseDelay[16].Q AND stSmacIO.inStatusWordRotative.4 THEN
	stSmacIO.qnControlWordLinear 		:= 1;
	nCycleFunctionState 				:= 500;
END_IF
500://linear get screw position 
IF tonCaseDelay[14].Q AND (stSmacIO.inCurrentPositionLinear > 8000(*it can change*)) THEN
	nCycleFunctionState 				:= 600;
	bScrewAnimation						:= TRUE;
END_IF
600://LINEAR SETTING TO GO TO HOME POSITION
stSmacIO.qnControlWordLinear 			:= 10;
stSmacIO.qnModeOfOperationLinear		:= 6;
IF tonCaseDelay[15].Q THEN
	nCycleFunctionState 				:= 700;
END_IF
700://LINEAR GO TO HOME POSITION
stSmacIO.qnControlWordLinear 			:= 1;
IF stSmacIO.inStatusWordLinear.4 THEN
	nCycleFunctionState 				:= 1000;
END_IF

1000: //WAITING SECOND PART
bFirstPartDoneFlag						:= TRUE;
IF rTrigCase[1].Q (*AND bFixtureGripperClosed	AND bGuideGripperClosed	*)THEN//Init second part
	nCycleFunctionState 				:= 1050;
END_IF
1050:
IF NOT (stSmacIO.inStatusWordLinear.13) AND NOT (stSmacIO.inStatusWordRotative.13) AND
	(stSmacIO.inStatusWordLinear.1)AND (stSmacIO.inStatusWordRotative.1) THEN //else errorTHEN //SECOND PART FLAG
	nCycleFunctionState 				:= 1100;
ELSE nCycleFunctionState 				:= 5000;
END_IF
1100: //SETTINGS SECOND PART
stSmacIO.qnSetVelocityRotative			:= 10; //RESETING VELOCITY
stSmacIO.qnControlWordLinear 			:= 10;
stSmacIO.qnControlWordRotative 			:= 10;
stSmacIO.qnModeOfOperationLinear		:= 4;
stSmacIO.qnSetPointRotative				:= bRotativeSetInPartPosition;//MOVEMENT TO SET IN PART
IF tonCaseDelay[17].Q THEN
	nCycleFunctionState 				:= 1200;
END_IF
1200: //START PROCESS
stSmacIO.qnSetVelocityRotative			:= nScaledRotativeVel; //SETTING VELOCITY
stSmacIO.qnControlWordLinear 			:= 1;
IF tonCaseDelay[18].Q THEN
	nCycleFunctionState 				:= 1300;
END_IF
1300: //WAITING FOR ROTATIVE
stSmacIO.qnControlWordRotative 			:= 1;
IF tonCaseDelay[19].Q AND stSmacIO.inStatusWordRotative.4 THEN
	nCycleFunctionState 				:= 1310;
END_IF
1310:
stSmacIO.qnControlWordRotative 			:= 10;
stSmacIO.qnSetPointRotative				:= nScaledRotativeSetPoint; 
IF tonCaseDelay[24].Q THEN
	nCycleFunctionState 				:= 1320;
END_IF
1320:
stSmacIO.qnControlWordRotative 			:= 1;
IF tonCaseDelay[25].Q  THEN
	nCycleFunctionState 				:= 1330;
END_IF
1330:
bOpenGuideGripper					:= TRUE;
IF tonCaseDelay[26].Q THEN
	nCycleFunctionState 				:= 1340;
END_IF
1340:
IF tonCaseDelay[28].Q AND tonCaseDelay[29].Q AND stSmacIO.inStatusWordRotative.4 THEN
	nCycleFunctionState 				:= 1360;
END_IF
1360:
MaxDistanceReached						:= stSmacIO.inCurrentPositionLinear;
IF tonCaseDelay[35].Q THEN
	nCycleFunctionState 				:= 1370;
	
END_IF
1370://it can be change by torque
IF MaxDistanceReached < nUppperHeightLimit AND
	MaxDistanceReached > nLowerHeightLimit THEN
	bPass								:= TRUE;
	bFail								:= FALSE;
ELSIF MaxDistanceReached > nUppperHeightLimit OR
	MaxDistanceReached < nLowerHeightLimit THEN
	bPass								:= FALSE;
	bFail								:= TRUE;
END_IF
IF tonCaseDelay[36].Q THEN
	nCycleFunctionState 					:= 1400;
END_IF

1400://SETTINGS TO GO HOME

stSmacIO.qnControlWordLinear 			:= 10;
stSmacIO.qnControlWordRotative 			:= 10;
stSmacIO.qnModeOfOperationLinear		:= 6;
stSmacIO.qnModeOfOperationRotative		:= 6;
IF tonCaseDelay[20].Q THEN
	nCycleFunctionState 				:= 1500;
END_IF
1500: //HOME POSITION
stSmacIO.qnControlWordLinear 			:= 1;
bScrewAnimation						:= FALSE;
IF tonCaseDelay[22].Q AND stSmacIO.inStatusWordLinear.4 THEN
	nCycleFunctionState 				:= 1600;
END_IF
1600://HOME PROCESS FINISH
stSmacIO.qnControlWordRotative 			:= 1;
IF tonCaseDelay[21].Q AND stSmacIO.inStatusWordRotative.4 THEN
	nCycleFunctionState 				:= 1700;
END_IF
1700://WAITING FOR ACKNOWLEDGE
bAutoCycleAcknowledgeRequest			:= TRUE;
IF bAutoCycleAcknowledge THEN
	bAutoCycleAcknowledgeRequest		:= FALSE;
	bCycleProcessDone					:= TRUE;
ELSIF tonCaseDelay[23].Q AND bAutoCycleAcknowledge THEN
	nCycleFunctionState 				:= 0;
END_IF

5000://CYCLE ERROR
bCycError								:= TRUE;
nCycleFunctionState 				:= 0;

END_CASE]]></ST>
      </Implementation>
    </Action>
    <Action Name="ACT_Manual" Id="{e0613091-3dc8-4122-9d9c-094360a20023}">
      <Implementation>
        <ST><![CDATA[IF tonCaseDelay[37].Q THEN
	nManCycle							:= 0;
END_IF

CASE nManCycle OF
0:
IF bPickCycleMan THEN
	nManCycle							:= 100;
ELSIF bScrewCycleMan THEN
	nManCycle							:= 1100;
ELSIF bHomeMan THEN
	nManCycle							:= 1900;
END_IF
stSmacIO.qnControlWordLinear 			:= 10;
stSmacIO.qnControlWordRotative			:= 10;
stSmacIO.qnModeOfOperationLinear		:= 4;
stSmacIO.qnModeOfOperationRotative		:= 2;

////////////////////////////////////////////////PICK CYCLE///////////////////////////////////////////////////////////////

100:// CHECKING HOME AND PHASING
IF stSmacIO.inStatusWordLinear.6 AND stSmacIO.inStatusWordLinear.8 AND
	stSmacIO.inStatusWordRotative.6 AND stSmacIO.inStatusWordRotative.8 THEN
	nManCycle 							:= 200;
ELSE nManCycle 							:= 5000;
END_IF
200://SAFETY CHECK
IF (stSmacIO.inModeOfOperationLinear = 4) AND (stSmacIO.inModeOfOperationRotative = 2) AND
	NOT (stSmacIO.inStatusWordLinear.13) AND NOT (stSmacIO.inStatusWordRotative.13) AND
	(stSmacIO.inStatusWordLinear.1)AND (stSmacIO.inStatusWordRotative.1) THEN //else error
	nManCycle 							:= 300;
ELSE nManCycle 							:= 5000;
END_IF
300:
IF tonCaseDelay[0].Q THEN
	nManCycle 							:= 400;
END_IF
400://ROTATIVE TO WORK POSITION
stSmacIO.qnSetPointRotative 			:= bRotativeWorkPosition;
IF tonCaseDelay[1].Q THEN
	stSmacIO.qnControlWordRotative 		:= 1;
	nManCycle 							:= 450;
	
END_IF
450://ONCE ROTATIVE FINISH LINEAR START
IF tonCaseDelay[2].Q AND stSmacIO.inStatusWordRotative.4 THEN
	stSmacIO.qnControlWordLinear 		:= 1;
	nManCycle 							:= 500;
END_IF
500:
IF tonCaseDelay[3].Q AND (stSmacIO.inCurrentPositionLinear > 8000) THEN
	nManCycle 							:= 600;
END_IF
600://LINEAR SETTING TO GO TO HOME POSITION
stSmacIO.qnControlWordLinear 			:= 10;
stSmacIO.qnModeOfOperationLinear		:= 6;
IF tonCaseDelay[4].Q THEN
	nManCycle 							:= 700;
END_IF
700://LINEAR GO TO HOME POSITION
stSmacIO.qnControlWordLinear 			:= 1;
IF stSmacIO.inStatusWordLinear.4 THEN
	nManCycle 							:= 0;
END_IF

////////////////////////////////////////////////SCREW CYCLE///////////////////////////////////////////////////////////////

1100:// CHECKING HOME AND PHASING
IF stSmacIO.inStatusWordLinear.6 AND stSmacIO.inStatusWordLinear.8 AND
	stSmacIO.inStatusWordRotative.6 AND stSmacIO.inStatusWordRotative.8 THEN
	nManCycle 							:= 1200;
ELSE nManCycle 							:= 5000;
END_IF
1200://SAFETY CHECK
IF (stSmacIO.inModeOfOperationLinear = 4) AND (stSmacIO.inModeOfOperationRotative = 2) AND
	NOT (stSmacIO.inStatusWordLinear.13) AND NOT (stSmacIO.inStatusWordRotative.13) AND
	(stSmacIO.inStatusWordLinear.1)AND (stSmacIO.inStatusWordRotative.1) THEN //else error
	nManCycle 							:= 1300;
ELSE nManCycle 							:= 5000;
END_IF
1300: 
bCloseGuideGripper						:= TRUE;
bCloseFixtureGripper					:= TRUE;
stSmacIO.qnSetVelocityRotative			:= 10; //RESETING VELOCITY
stSmacIO.qnSetPointRotative				:= bRotativeSetInPartPosition;//MOVEMENT TO SET IN PART
IF tonCaseDelay[5].Q THEN
	nManCycle 							:= 1400;
END_IF
1400: //START PROCESS
stSmacIO.qnSetVelocityRotative			:= nScaledRotativeVel; //SETTING VELOCITY
stSmacIO.qnControlWordLinear 			:= 1;
IF tonCaseDelay[6].Q THEN
	nManCycle 							:= 1500;
END_IF
1500: //WAITING FOR ROTATIVE
stSmacIO.qnControlWordRotative 			:= 1;
IF tonCaseDelay[7].Q AND stSmacIO.inStatusWordRotative.4 THEN
	nManCycle 							:= 1600;
END_IF
1600:
stSmacIO.qnControlWordRotative 			:= 10;
stSmacIO.qnSetPointRotative				:= nScaledRotativeSetPoint; 
IF tonCaseDelay[8].Q THEN
	nManCycle 							:= 1700;
END_IF
1700:
stSmacIO.qnControlWordRotative 			:= 1;
IF tonCaseDelay[9].Q  THEN
	nManCycle 							:= 1750;
END_IF
1750:

IF tonCaseDelay[31].Q THEN
	bCloseGuideGripper					:= FALSE;
	nManCycle 							:= 1800;
END_IF
1800:
IF  tonCaseDelay[29].Q AND stSmacIO.inStatusWordRotative.4 THEN
	nManCycle 							:= 1900;
END_IF
	
1900://SETTINGS TO GO HOME
stSmacIO.qnControlWordLinear 			:= 10;
stSmacIO.qnControlWordRotative 			:= 10;
stSmacIO.qnModeOfOperationLinear		:= 6;
stSmacIO.qnModeOfOperationRotative		:= 6;
IF tonCaseDelay[32].Q THEN
	nManCycle 							:= 2000;
END_IF
2000: //HOME POSITION
stSmacIO.qnControlWordLinear 			:= 1;
IF tonCaseDelay[33].Q AND stSmacIO.inStatusWordLinear.4 THEN
	nManCycle 							:= 2100;
	bCloseFixtureGripper				:= FALSE;
END_IF
2100://HOME PROCESS FINISH
stSmacIO.qnControlWordRotative 			:= 1;
IF tonCaseDelay[34].Q AND stSmacIO.inStatusWordRotative.4 THEN
	nManCycle							:= 0;
END_IF






END_CASE]]></ST>
      </Implementation>
    </Action>
    <Action Name="ACT_Settings" Id="{a163bf56-16ad-4f51-9bf7-6778d7007096}">
      <Implementation>
        <ST><![CDATA[//CONSTANTS IN BASE TO THE MANUAL

nScaledLinearVel 		:=LREAL_TO_DINT( bVelConst *nLinearVel);
nScaledLinearAcc 		:=LREAL_TO_DINT( bAccConst *nLinearAcc);
nDistanceSetPoint		:=REAL_TO_DINT( 200 *nLinearSetPoint);//6761
nScaledLinearSetPoint	:=10000;
nScaledLinearTorque		:=REAL_TO_INT( nLinearTorque*1365);

nScaledRotativeVel 		:=LREAL_TO_DINT( bVelConst *nRotativeVel);
nScaledRotativeAcc 		:=LREAL_TO_DINT( bAccConst *nRotativeAcc);
nScaledRotativeSetPoint	:=REAL_TO_DINT( 5.5 *nRotativeSetPoint);


IF rTrigCase[2].Q THEN	
	stSmacIO.qnSetVelocityLinear			:= nScaledLinearVel;
	stSmacIO.qnSetAcceleraionLinear			:= nScaledLinearAcc;
	stSmacIO.qnSetPointLinear				:= nScaledLinearSetPoint;
	stSmacIO.qnSetMaxiumTorqueLinear		:= nScaledLinearTorque;
	
	stSmacIO.qnSetVelocityRotative			:= nScaledRotativeVel;
	stSmacIO.qnSetAcceleraionRotative		:= nScaledRotativeAcc;
	stSmacIO.qnSetPointRotative				:= nScaledRotativeSetPoint;
	
END_IF

nUppperHeightLimit 							:= nDistanceSetPoint + nDistanceTolerance;
nLowerHeightLimit							:= nDistanceSetPoint - nDistanceTolerance;




]]></ST>
      </Implementation>
    </Action>
    <Action Name="ACT_TimTrig" Id="{e2b5bd23-dc1e-4952-9d3a-8046ea33ca34}">
      <Implementation>
        <ST><![CDATA[	////////////////////////////////////////////TON//////////////////////////////////////////

	//MANUAL
	tonCaseDelay[0](IN :=nManCycle = 300,PT:= T#100MS ); 
	tonCaseDelay[1](IN :=nManCycle = 400,PT:= T#500MS );
	tonCaseDelay[2](IN :=nManCycle = 450,PT:= T#500MS );
	
	tonCaseDelay[3](IN := nManCycle = 500,PT:= T#100MS ); 
	tonCaseDelay[4](IN := nManCycle = 600,PT:= T#500MS );
	tonCaseDelay[5](IN := nManCycle = 1300,PT:= T#100MS );
	tonCaseDelay[6](IN := nManCycle = 1400,PT:= T#100MS );
	tonCaseDelay[7](IN := nManCycle = 1500,PT:= T#100MS );
	tonCaseDelay[8](IN := nManCycle = 1600,PT:= T#100MS );
	tonCaseDelay[9](IN := nManCycle = 1700,PT:= T#100MS );
	tonCaseDelay[31](IN := nManCycle = 1750,PT:= T#2S );
	tonCaseDelay[32](IN := nManCycle = 1900,PT:= T#500MS );
	tonCaseDelay[33](IN := nManCycle = 2000,PT:= T#500MS );
	tonCaseDelay[34](IN := nManCycle = 2100,PT:= T#500MS );
	//CYCLE
	tonCaseDelay[10](IN := nCycleFunctionState =10,PT:= T#100MS ); 
	tonCaseDelay[11](IN := nCycleFunctionState =300,PT:= T#100MS ); 
	tonCaseDelay[12](IN := nCycleFunctionState =400,PT:= T#500MS );
	tonCaseDelay[13](IN := nCycleFunctionState =150,PT:= T#500MS );
	tonCaseDelay[14](IN := nCycleFunctionState =500,PT:= T#1500MS );
	tonCaseDelay[15](IN := nCycleFunctionState =600,PT:= T#100MS );
	tonCaseDelay[16](IN := nCycleFunctionState =450,PT:= T#1S );
	tonCaseDelay[17](IN := nCycleFunctionState =1100,PT:= T#100MS );
	tonCaseDelay[18](IN := nCycleFunctionState =1200,PT:= T#1500MS );
	tonCaseDelay[19](IN := nCycleFunctionState =1300,PT:= T#1S );
	tonCaseDelay[20](IN := nCycleFunctionState =1400,PT:= T#100MS );
	tonCaseDelay[21](IN := nCycleFunctionState =1600 ,PT:= T#1S );
	tonCaseDelay[22](IN := nCycleFunctionState =1500,PT:= T#1S );
	tonCaseDelay[23](IN :=bAutoCycleAcknowledge ,PT:= T#1S );
	tonCaseDelay[24](IN :=nCycleFunctionState =1310 ,PT:= T#500MS );
	tonCaseDelay[25](IN := nCycleFunctionState =1320 ,PT:= T#500MS );
	tonCaseDelay[26](IN := NOT bGuideGripperClosed,PT:= T#1S );
	tonCaseDelay[27](IN :=nCycleFunctionState =1800,PT:= T#1S );
	tonCaseDelay[28](IN := nCycleFunctionState =1340 ,PT:= T#1S );
	tonCaseDelay[29](IN := stSmacIO.inStatusWordRotative.4 ,PT:= T#2S );
	tonCaseDelay[30](IN := nCycleFunctionState =1700,PT:= T#100MS );
	tonCaseDelay[35](IN := nCycleFunctionState =1360,PT:= T#500MS );
	tonCaseDelay[36](IN := nCycleFunctionState =1370,PT:= T#500MS );
	
	tonCaseDelay[37](IN := nManCycle <> 0,PT:= T#20S );
////////////////////////////////////////////TRIGGER//////////////////////////////////////////	
	rTrigCase[0]( CLK := bAutoCycleRequest);
	rTrigCase[1]( CLK := bInitSecondPart);
	rTrigCase[2]( CLK := bSetValues);
	
	
	
	]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="FB_SmacCycleMan">
      <LineId Id="39" Count="2" />
      <LineId Id="79" Count="0" />
      <LineId Id="82" Count="1" />
      <LineId Id="22" Count="1" />
      <LineId Id="150" Count="0" />
    </LineIds>
    <LineIds Name="FB_SmacCycleMan.ACT_Cycle">
      <LineId Id="62" Count="0" />
      <LineId Id="64" Count="1" />
      <LineId Id="63" Count="0" />
      <LineId Id="2" Count="1" />
      <LineId Id="23" Count="1" />
      <LineId Id="201" Count="0" />
      <LineId Id="203" Count="0" />
      <LineId Id="214" Count="0" />
      <LineId Id="329" Count="0" />
      <LineId Id="204" Count="2" />
      <LineId Id="200" Count="0" />
      <LineId Id="347" Count="0" />
      <LineId Id="207" Count="0" />
      <LineId Id="186" Count="1" />
      <LineId Id="274" Count="0" />
      <LineId Id="312" Count="1" />
      <LineId Id="189" Count="0" />
      <LineId Id="208" Count="0" />
      <LineId Id="198" Count="0" />
      <LineId Id="193" Count="1" />
      <LineId Id="196" Count="0" />
      <LineId Id="211" Count="0" />
      <LineId Id="195" Count="0" />
      <LineId Id="28" Count="1" />
      <LineId Id="112" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="215" Count="0" />
      <LineId Id="32" Count="1" />
      <LineId Id="39" Count="2" />
      <LineId Id="34" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="119" Count="0" />
      <LineId Id="121" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="209" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="120" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="116" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="124" Count="0" />
      <LineId Id="123" Count="0" />
      <LineId Id="46" Count="2" />
      <LineId Id="331" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="96" Count="0" />
      <LineId Id="111" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="100" Count="7" />
      <LineId Id="98" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="210" Count="0" />
      <LineId Id="225" Count="0" />
      <LineId Id="231" Count="1" />
      <LineId Id="226" Count="0" />
      <LineId Id="228" Count="2" />
      <LineId Id="227" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="191" Count="0" />
      <LineId Id="95" Count="0" />
      <LineId Id="142" Count="0" />
      <LineId Id="126" Count="0" />
      <LineId Id="239" Count="0" />
      <LineId Id="128" Count="1" />
      <LineId Id="127" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="192" Count="0" />
      <LineId Id="133" Count="0" />
      <LineId Id="136" Count="1" />
      <LineId Id="135" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="131" Count="0" />
      <LineId Id="139" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="138" Count="0" />
      <LineId Id="241" Count="7" />
      <LineId Id="251" Count="1" />
      <LineId Id="250" Count="0" />
      <LineId Id="253" Count="1" />
      <LineId Id="256" Count="2" />
      <LineId Id="266" Count="0" />
      <LineId Id="268" Count="1" />
      <LineId Id="259" Count="0" />
      <LineId Id="314" Count="0" />
      <LineId Id="325" Count="0" />
      <LineId Id="323" Count="1" />
      <LineId Id="328" Count="0" />
      <LineId Id="315" Count="0" />
      <LineId Id="255" Count="0" />
      <LineId Id="335" Count="4" />
      <LineId Id="343" Count="0" />
      <LineId Id="342" Count="0" />
      <LineId Id="340" Count="0" />
      <LineId Id="334" Count="0" />
      <LineId Id="344" Count="2" />
      <LineId Id="341" Count="0" />
      <LineId Id="146" Count="0" />
      <LineId Id="333" Count="0" />
      <LineId Id="148" Count="0" />
      <LineId Id="147" Count="0" />
      <LineId Id="149" Count="1" />
      <LineId Id="152" Count="1" />
      <LineId Id="151" Count="0" />
      <LineId Id="154" Count="0" />
      <LineId Id="159" Count="0" />
      <LineId Id="332" Count="0" />
      <LineId Id="287" Count="1" />
      <LineId Id="161" Count="0" />
      <LineId Id="163" Count="0" />
      <LineId Id="286" Count="0" />
      <LineId Id="289" Count="1" />
      <LineId Id="157" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="53" Count="1" />
      <LineId Id="190" Count="0" />
      <LineId Id="233" Count="0" />
      <LineId Id="236" Count="1" />
      <LineId Id="56" Count="0" />
      <LineId Id="212" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="213" Count="0" />
      <LineId Id="273" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="FB_SmacCycleMan.ACT_Manual">
      <LineId Id="337" Count="0" />
      <LineId Id="339" Count="1" />
      <LineId Id="338" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="171" Count="0" />
      <LineId Id="181" Count="1" />
      <LineId Id="184" Count="1" />
      <LineId Id="238" Count="0" />
      <LineId Id="237" Count="0" />
      <LineId Id="183" Count="0" />
      <LineId Id="191" Count="2" />
      <LineId Id="190" Count="0" />
      <LineId Id="313" Count="0" />
      <LineId Id="312" Count="0" />
      <LineId Id="314" Count="0" />
      <LineId Id="172" Count="0" />
      <LineId Id="195" Count="10" />
      <LineId Id="186" Count="0" />
      <LineId Id="173" Count="0" />
      <LineId Id="206" Count="3" />
      <LineId Id="212" Count="24" />
      <LineId Id="174" Count="0" />
      <LineId Id="310" Count="0" />
      <LineId Id="175" Count="0" />
      <LineId Id="311" Count="0" />
      <LineId Id="240" Count="0" />
      <LineId Id="316" Count="10" />
      <LineId Id="245" Count="0" />
      <LineId Id="252" Count="0" />
      <LineId Id="327" Count="1" />
      <LineId Id="253" Count="0" />
      <LineId Id="257" Count="25" />
      <LineId Id="329" Count="0" />
      <LineId Id="333" Count="0" />
      <LineId Id="330" Count="1" />
      <LineId Id="335" Count="0" />
      <LineId Id="332" Count="0" />
      <LineId Id="288" Count="16" />
      <LineId Id="336" Count="0" />
      <LineId Id="305" Count="4" />
      <LineId Id="241" Count="0" />
      <LineId Id="176" Count="4" />
      <LineId Id="170" Count="0" />
      <LineId Id="169" Count="0" />
    </LineIds>
    <LineIds Name="FB_SmacCycleMan.ACT_Settings">
      <LineId Id="30" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="44" Count="1" />
      <LineId Id="55" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="1" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="54" Count="0" />
      <LineId Id="52" Count="1" />
      <LineId Id="50" Count="1" />
      <LineId Id="3" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="38" Count="2" />
      <LineId Id="27" Count="0" />
    </LineIds>
    <LineIds Name="FB_SmacCycleMan.ACT_TimTrig">
      <LineId Id="1" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="5" Count="1" />
      <LineId Id="4" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="9" Count="1" />
      <LineId Id="8" Count="0" />
      <LineId Id="47" Count="4" />
      <LineId Id="13" Count="0" />
      <LineId Id="52" Count="1" />
      <LineId Id="14" Count="3" />
      <LineId Id="24" Count="5" />
      <LineId Id="22" Count="0" />
      <LineId Id="30" Count="5" />
      <LineId Id="42" Count="2" />
      <LineId Id="46" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="54" Count="2" />
      <LineId Id="23" Count="0" />
      <LineId Id="18" Count="1" />
      <LineId Id="36" Count="0" />
      <LineId Id="40" Count="1" />
      <LineId Id="38" Count="1" />
      <LineId Id="37" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>